objects/nBIDC__BI_Data__c.object
<CustomObject>
    <fields>
        <fullName>nBIDC__Average__c</fullName>
        <label>Average</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nBIDC__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nBIDC__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nBIDC__Grouping_1__c</fullName>
        <label>Grouping 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBIDC__Grouping_2__c</fullName>
        <label>Grouping 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBIDC__Grouping_3__c</fullName>
        <label>Grouping 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBIDC__Is_Dirty__c</fullName>
        <formula>OR(ISNULL(nBIDC__Send_Date_Time__c),DATEVALUE(LastModifiedDate) &gt; DATEVALUE(nBIDC__Send_Date_Time__c))</formula>
        <label>Is Dirty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nBIDC__Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nBIDC__Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nBIDC__Send_Date_Time__c</fullName>
        <label>Send Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nBIDC__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nBIDC__Sum__c</fullName>
        <label>Sum</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nBIDC__Timestamp__c</fullName>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nBIDC__Unique_Name__c</fullName>
        <externalId>true</externalId>
        <label>Unique Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nBIDC__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>BI Data</label>
    <listViews>
        <fullName>nBIDC__All</fullName>
        <columns>NAME</columns>
        <columns>nBIDC__Unique_Name__c</columns>
        <columns>nBIDC__Count__c</columns>
        <columns>nBIDC__Max__c</columns>
        <columns>nBIDC__Min__c</columns>
        <columns>nBIDC__Average__c</columns>
        <columns>nBIDC__Sum__c</columns>
        <columns>nBIDC__Value__c</columns>
        <columns>nBIDC__Grouping_1__c</columns>
        <columns>nBIDC__Grouping_2__c</columns>
        <columns>nBIDC__Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000000000}</displayFormat>
        <label>BI Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BI Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>